codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__mission_control_projects.snap
---
source: tui/src/chatwidget/tests/mission_control.rs
assertion_line: 54
expression: "render_bottom_popup(&chat, 120)"
---
  2 projects

  Sessions  [Projects]  Questions  Queue  Goals  Schedules

  Search
› open-codewith  1 waiting
  workflows      1 attention

  Press enter to confirm or esc to go back
