codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__mission_control_secret_question_disabled.snap
---
source: tui/src/chatwidget/tests/mission_control.rs
expression: "render_bottom_popup(&chat, 120)"
---
  Waiting 1  Answerable 0

  Sessions (2)  Projects (2)  [Questions (1)]  Work Queue (2)  Goal Chains (2)

  Search sessions, projects, questions, queues, and goal chains
› Codewith orchestration (disabled)  Thread 11111111 | interaction interaction-1 | Enter the deployment token.
                                     (disabled: Use the source session for secret, option, or Other prompts so the
                                     standard masked UI is preserved)

  Press enter to confirm or esc to go back
